--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -1,1 +1,5 @@
-add_subdirectory(src)
+add_definitions(-DTRANSLATION_DOMAIN=\"kmarkdownwebview\")
+
+add_subdirectory(lib)
+
+add_subdirectory(kpart)
